Updating gh-pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- TODO Add other meta info -->
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="web_app/css/style.css">
 
     <link rel="manifest" href="manifest.json">
 </head>
@@ -26,7 +26,7 @@
 
             <div class="weather-info">
                 <div class="w-cond">
-                    <img class="cond" src="./../w-icons/30.png">
+                    <img class="cond" src="./w-icons/30.png">
                     <span> Partly Cloudy </span>
                 </div>
                 <div class="temp">
@@ -69,7 +69,7 @@
                         Monday
                       </div>
                       <div class="forecast-cond">
-                        <img class="" src="./../w-icons/11.png">
+                        <img class="" src="./w-icons/11.png">
                         <!-- <span> Rain </span> -->
                       </div>
                       <!-- <div class="forecast-prec">
@@ -87,7 +87,7 @@
                         Tuesday
                       </div>
                       <div class="forecast-cond">
-                        <img class="" src="./../w-icons/14.png">
+                        <img class="" src="./w-icons/14.png">
                         <!-- <span> Rain </span> -->
                       </div>
                       <!-- <div class="forecast-prec">
@@ -105,7 +105,7 @@
                         Wednesday
                       </div>
                       <div class="forecast-cond">
-                        <img class="" src="./../w-icons/23.png">
+                        <img class="" src="./w-icons/23.png">
                         <!-- <span> Rain </span> -->
                       </div>
                       <!-- <div class="forecast-prec">
@@ -123,7 +123,7 @@
                         Thursday
                       </div>
                       <div class="forecast-cond">
-                        <img class="" src="./../w-icons/16.png">
+                        <img class="" src="./w-icons/16.png">
                         <!-- <span> Rain </span> -->
                       </div>
                       <!-- <div class="forecast-prec">
@@ -141,7 +141,7 @@
                         Friday
                       </div>
                       <div class="forecast-cond">
-                        <img class="" src="./../w-icons/13.png">
+                        <img class="" src="./w-icons/13.png">
                         <!-- <span> Rain </span> -->
                       </div>
                       <!-- <div class="forecast-prec">
