Update forecast details
1. Update 5 days forecast
2. Update weather condition icons

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -46,23 +46,15 @@
             <div class="basic-info">
                 <div id="currentWeather" class="weather-info">
                     <div class="w-cond">
-                        <img class="cond-code" src="./../w-icons/30.png">
+                        <img class="cond-code" src="">
                         <span class="cond"> Partly Cloudy </span>
                     </div>
                     <div class="temp">
                         <!-- TODO svg arrow with top horizontal line -->
                         <div class="temp-max" id="temp-max">
-                            <svg width="20" height="20" viewBox="0 0 48 48" data-icon="arrow-up" style="fill: rgb(255, 255, 255); stroke: rgb(255, 255, 255); stroke-width: 0; vertical-align: bottom;">
-                              <path d="M13.764 18.75c-.792.772-.808 2.037-.04 2.828.772.792 2.038.81 2.83.04l5.678-5.526v23.59h4v-23.59l5.68 5.525c.79.77 2.058.753 2.827-.04.377-.388.565-.89.565-1.394 0-.52-.202-1.042-.605-1.434L24.23 8.566 13.763 18.75z"></path>
-                            </svg>
-                            <span>31&#xb0;</span>
                         </div>
 
                         <div class="temp-min" id="temp-min">
-                            <svg width="20" height="20" viewBox="0 0 48 48" data-icon="arrow-down" style="fill: rgb(255, 255, 255); stroke: rgb(255, 255, 255); stroke-width: 0; vertical-align: bottom;">
-                      <path d="M34.7 29.5c.793-.773.81-2.038.04-2.83-.77-.79-2.037-.81-2.83-.038l-5.677 5.525V8.567h-4v23.59l-5.68-5.525c-.79-.77-2.058-.753-2.827.04-.378.388-.566.89-.566 1.394 0 .52.202 1.042.605 1.434l10.472 10.183L34.7 29.5z"></path>
-                    </svg>
-                            <span>14&#xb0;</span>
                         </div>
                     </div>
                     <div class="cur-temp">
@@ -83,96 +75,6 @@
 
                     <div id="daily-forecast" class="daily-forecast">
 
-                        <!-- Day 1 -->
-                        <div class="forecast">
-                            <div class="forecast-day">
-                                Monday
-                            </div>
-                            <div class="forecast-cond">
-                                <img class="" src="./../w-icons/11.png">
-                                <!-- <span> Rain </span> -->
-                            </div>
-                            <!-- <div class="forecast-prec">
-                        Monday
-                      </div> -->
-                            <div class="forecast-temp">
-                                <span>&#xb0;</span>
-                                <span class="max">21&#xb0;</span>
-                                <span class="min">14&#xb0;</span>
-                            </div>
-                        </div>
-
-                        <!-- Day 2 -->
-                        <div class="forecast">
-                            <div class="forecast-day">
-                                Tuesday
-                            </div>
-                            <div class="forecast-cond">
-                                <img class="" src="./../w-icons/14.png">
-                                <!-- <span> Rain </span> -->
-                            </div>
-                            <!-- <div class="forecast-prec">
-                        Monday
-                      </div> -->
-                            <div class="forecast-temp">
-                                <span class="max">24&#xb0;</span>
-                                <span class="min">18&#xb0;</span>
-                            </div>
-                        </div>
-
-                        <!-- Day 3 -->
-                        <div class="forecast">
-                            <div class="forecast-day">
-                                Wednesday
-                            </div>
-                            <div class="forecast-cond">
-                                <img class="" src="./../w-icons/23.png">
-                                <!-- <span> Rain </span> -->
-                            </div>
-                            <!-- <div class="forecast-prec">
-                        Monday
-                      </div> -->
-                            <div class="forecast-temp">
-                                <span class="max">22&#xb0;</span>
-                                <span class="min">17&#xb0;</span>
-                            </div>
-                        </div>
-
-                        <!-- Day 4 -->
-                        <div class="forecast">
-                            <div class="forecast-day">
-                                Thursday
-                            </div>
-                            <div class="forecast-cond">
-                                <img class="" src="./../w-icons/16.png">
-                                <!-- <span> Rain </span> -->
-                            </div>
-                            <!-- <div class="forecast-prec">
-                        Monday
-                      </div> -->
-                            <div class="forecast-temp">
-                                <span class="max">23&#xb0;</span>
-                                <span class="min">17</span>
-                            </div>
-                        </div>
-
-                        <!-- Day 5 -->
-                        <div class="forecast">
-                            <div class="forecast-day">
-                                Friday
-                            </div>
-                            <div class="forecast-cond">
-                                <img class="" src="./../w-icons/13.png">
-                                <!-- <span> Rain </span> -->
-                            </div>
-                            <!-- <div class="forecast-prec">
-                        Monday
-                      </div> -->
-                            <div class="forecast-temp">
-                                <span class="max">27&#xb0;</span>
-                                <span class="min">20&#xb0;</span>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
