--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Weather App PWA">
     <link rel="apple-touch-icon" href="web_app/favicon.png">
+    
     <!-- TODO Add other meta info -->
+    <meta name="theme-color" content="#6c00f6">
 
     <link rel="icon" type="image/x-icon" href="web_app/favicon.png">
     <!-- Stylesheet -->
