Adding meta for windows tiles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+    <!-- Meta Spcific to iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Weather App PWA">
     <link rel="apple-touch-icon" href="web_app/favicon.png">
-    
-    <!-- TODO Add other meta info -->
+
+    <!-- Theme color for android app -->
     <meta name="theme-color" content="#6c00f6">
+
+    <!-- Metadata for windows devices -->
+    <meta name="application-name" content="Weather App PWA"/>
+    <meta name="msapplication-TileColor" content="#6c00f6"/>
+    <meta name="msapplication-square70x70logo" content="assets/app-icons/app_icon_72x72.png"/>
+    <meta name="msapplication-square150x150logo" content="assets/app-icons/app_icon_96x96.png"/>
+    <meta name="msapplication-wide310x150logo" content="assets/app-icons/app_icon_144x144.png"/>
+    <meta name="msapplication-square310x310logo" content="assets/app-icons/app_icon_192x192.png"/>
 
     <link rel="icon" type="image/x-icon" href="web_app/favicon.png">
     <!-- Stylesheet -->
