--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Weather app PWA">
-    <link rel="apple-touch-icon" href="favicon.png">
-    <!-- TODO Add other meta info -->
-
     <link rel="icon" type="image/x-icon" href="favicon.png">
+
+    <!-- Meta Spcific to iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Weather App PWA">
+    <link rel="apple-touch-icon" href="favicon.png">
+
+    <!-- Theme color for android app -->
+    <meta name="theme-color" content="#6c00f6">
+
+    <!-- Metadata for windows devices -->
+    <meta name="application-name" content="Weather App PWA" />
+    <meta name="msapplication-TileColor" content="#6c00f6" />
+    <meta name="msapplication-square70x70logo" content="assets/app-icons/app_icon_72x72.png" />
+    <meta name="msapplication-square150x150logo" content="assets/app-icons/app_icon_96x96.png" />
+    <meta name="msapplication-wide310x150logo" content="assets/app-icons/app_icon_144x144.png" />
+    <meta name="msapplication-square310x310logo" content="assets/app-icons/app_icon_192x192.png" />
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -31,8 +43,8 @@
         </div>
 
         <div class="city-info">
-            <div class="place"></div>
-            <div class="time"></div>
+            <div class="place">--</div>
+            <div class="time">--</div>
         </div>
 
         <div id="btnRefresh" class="refresh">
@@ -59,7 +71,7 @@
                         </div>
                     </div>
                     <div class="cur-temp">
-                        <span>21&#xb0;</span>
+                        <span></span>
                     </div>
                 </div>
             </div>
@@ -99,8 +111,8 @@
 
                     <div class="wind-pressure-forecast">
                         <div class="wind-icon">
-                          <img class="turbine"/>
-                          <!-- <img class="turbine-small"/> -->
+                            <img class="turbine" />
+                            <!-- <img class="turbine-small"/> -->
                         </div>
                         <div class="details">
                             <div class="padding-bottom-border">
@@ -120,7 +132,7 @@
 
                     <div class="weather-details">
                         <div class="cond-icon">
-                            <img class="weather-condition-icon"/>
+                            <img class="weather-condition-icon" />
                         </div>
 
                         <div class="details">
