--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     </script>
 
     <!-- script inject -->
+    <script src="js/util.js"></script>
     <script src="js/app.js"></script>
 
 </body>
